--- a/aos-kaai-dark.css
+++ b/aos-kaai-dark.css
@@ -61,6 +61,7 @@ core-field {
 	-webkit-transition: height 0.35s;
 	-moz-transition: height 0.35s;
 	transition: height 0.35s;
+	@apply(--layout-horizontal --layout-center --layout-center-justified);
 }
 
 #mobilekaai {
@@ -97,6 +98,7 @@ core-field {
 
 .tools {
 	padding-right: 2vw;
+	@apply(--layout-horizontal);
 }
 
 /*
