--- a/aos-kaai-dark.css
+++ b/aos-kaai-dark.css
@@ -5,7 +5,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-}
+/*  @apply(--layout-vertical-center);
+*/}
 
 a {
 	color: white;
@@ -19,33 +20,6 @@ h1 {
 	font-weight: 100;
 }
 
-core-dropdown-menu {
-	background-color: #333333;
-	text-transform: uppercase;
-	font-size: 10px;
-	font-weight: 600;
-	color: #808080;
-}
-
-core-dropdown {
-	background-color: #333333;
-}
-
-core-item {
-	padding: 5px 14px 0px 18px;
-}
-
-core-selector {
-	background-color: #333333;
-}
-
-
-.dropdown {
-	background-color: #333333;
-	border-top: 1px solid #555555;
-	padding: 0px;
-	margin: 0px;
-}
 
 core-field {
 	background-color: #555555;
@@ -53,7 +27,8 @@ core-field {
 }
 
 #kaai {
-	background-color: #333333;
+/*	@apply(--layout-vertical);
+*/	background-color: #333333;
 	width: 100%;
 	padding: 0px;
 	margin: 0px;
@@ -61,7 +36,6 @@ core-field {
 	-webkit-transition: height 0.35s;
 	-moz-transition: height 0.35s;
 	transition: height 0.35s;
-	@apply(--layout-horizontal --layout-center --layout-center-justified);
 }
 
 #mobilekaai {
@@ -70,7 +44,7 @@ core-field {
 	padding: 0px;
 	margin: 0px;
 	height: 60px;
-			-webkit-transition: height 0.35s;
+	-webkit-transition: height 0.35s;
 	-moz-transition: height 0.35s;
 	transition: height 0.35s;
 }
@@ -90,11 +64,9 @@ core-field {
 	padding: 0px;
 }
 
-
 .helpings {
 	padding-left: 2vw;
 }
-
 
 .tools {
 	padding-right: 2vw;
